syntax = "proto3";

package greetpb;

option go_package="pkg/greetpb";

message Greeting {
	// unary
	string first_name = 1;
	string last_name = 2;
}

message GreetRequest {
	Greeting greeting = 1;
}

message GreetResponse {
	string result = 1;
}

message Greet2Response {
	string result = 1;
}

service GreetService {
	// unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};

	// server streaming
	rpc Greet2(GreetRequest) returns (stream Greet2Response) {};
}
